Update video slides in index.html

--- a/index.html
+++ b/index.html
@@ -128,8 +128,7 @@ body {
 <body>
 
 <div class="card">
-  <div class="title">LD Sample</div>
-  <div class="subtitle">Live2D Rigging Video</div>
+  <div class="title">SD Sample</div>
 
   <!-- 메인 영상 -->
   <div class="carousel">
@@ -137,11 +136,11 @@ body {
     <button class="arrow right" onclick="next()">›</button>
 
     <div class="track" id="track">
-      <div class="slide"><iframe src="https://www.youtube.com/embed/XVWdGuv98cA" allowfullscreen></iframe></div>
-      <div class="slide"><iframe src="https://www.youtube.com/embed/QkrOsMwS6Jc" allowfullscreen></iframe></div>
-      <div class="slide"><iframe src="https://www.youtube.com/embed/VTTCGMLKsck" allowfullscreen></iframe></div>
-      <div class="slide"><iframe src="https://www.youtube.com/embed/o5cCjZhmjW0" allowfullscreen></iframe></div>
-      <div class="slide"><iframe src="https://www.youtube.com/embed/BJ6W7zSCWvI" allowfullscreen></iframe></div>
+      <div class="slide"><iframe src="https://www.youtube.com/embed/T8R18oq64Ow?si=zkVcrKLb18RnJ0Rp" allowfullscreen></iframe></div>
+      <div class="slide"><iframe src="https://www.youtube.com/embed/PjVecG_rs90?si=DF9woK3uQEGRjL1X" allowfullscreen></iframe></div>
+      <div class="slide"><iframe src="https://www.youtube.com/embed/jGZrpRL5F70?si=DJwsATNs9Z6Jqg5H" allowfullscreen></iframe></div>
+      <div class="slide"><iframe src="https://www.youtube.com/embed/X1C3nAev5PU?si=Hz2tVRzDkEEWQtov" allowfullscreen></iframe></div>
+      <div class="slide"><iframe src="https://www.youtube.com/embed/m2ow6rAFkyU?si=euqPiSCQFeAKLFvy" allowfullscreen></iframe></div>
     </div>
   </div>
 
