--- a/index.html
+++ b/index.html
@@ -147,19 +147,19 @@ body {
   <!-- 🔥 미리보기 -->
   <div class="thumbs" id="thumbs">
     <div class="thumb active" onclick="moveTo(0)">
-      <img src="https://img.youtube.com/vi/XVWdGuv98cA/hqdefault.jpg">
+      <img src="https://img.youtube.com/vi/T8R18oq64Ow?si=zkVcrKLb18RnJ0Rp/hqdefault.jpg">
     </div>
     <div class="thumb" onclick="moveTo(1)">
-      <img src="https://img.youtube.com/vi/QkrOsMwS6Jc/hqdefault.jpg">
+      <img src="https://img.youtube.com/vi/PjVecG_rs90?si=DF9woK3uQEGRjL1X/hqdefault.jpg">
     </div>
     <div class="thumb" onclick="moveTo(2)">
-      <img src="https://img.youtube.com/vi/VTTCGMLKsck/hqdefault.jpg">
+      <img src="https://img.youtube.com/vi/jGZrpRL5F70?si=DJwsATNs9Z6Jqg5H/hqdefault.jpg">
     </div>
     <div class="thumb" onclick="moveTo(3)">
-      <img src="https://img.youtube.com/vi/o5cCjZhmjW0/hqdefault.jpg">
+      <img src="https://img.youtube.com/vi/X1C3nAev5PU?si=Hz2tVRzDkEEWQtov/hqdefault.jpg">
     </div>
     <div class="thumb" onclick="moveTo(4)">
-      <img src="https://img.youtube.com/vi/BJ6W7zSCWvI/hqdefault.jpg">
+      <img src="https://img.youtube.com/vi/m2ow6rAFkyU?si=euqPiSCQFeAKLFvy/hqdefault.jpg">
     </div>
   </div>
 </div>
