--- a/index.html
+++ b/index.html
@@ -134,22 +134,24 @@ body {
     </div>
   </div>
 
-  <div class="thumbs">
-    <div class="thumb active" onclick="moveTo(0)">
-      <img src="https://img.youtube.com/vi/T8R18oq64Ow/hqdefault.jpg">
-    </div>
-    <div class="thumb" onclick="moveTo(1)">
-      <img src="https://img.youtube.com/vi/PjVecG_rs90/hqdefault.jpg">
-    </div>
-    <div class="thumb" onclick="moveTo(2)">
-      <img src="https://img.youtube.com/vi/jGZrpRL5F70/hqdefault.jpg">
-    </div>
-    <div class="thumb" onclick="moveTo(3)">
-      <img src="https://img.youtube.com/vi/X1C3nAev5PU/hqdefault.jpg">
-    </div>
-    <div class="thumb" onclick="moveTo(4)">
-      <img src="https://img.youtube.com/vi/m2ow6rAFkyU/hqdefault.jpg">
-    </div>
+<div class="thumbs" id="thumbs">
+  <div class="thumb active" onclick="selectVideo(0)">
+    <img src="https://img.youtube.com/vi/T8R18oq64Ow/hqdefault.jpg">
+  </div>
+  <div class="thumb" onclick="selectVideo(1)">
+    <img src="https://img.youtube.com/vi/PjVecG_rs90/hqdefault.jpg">
+  </div>
+  <div class="thumb" onclick="selectVideo(2)">
+    <img src="https://img.youtube.com/vi/jGZrpRL5F70/hqdefault.jpg">
+  </div>
+  <div class="thumb" onclick="selectVideo(3)">
+    <img src="https://img.youtube.com/vi/X1C3nAev5PU/hqdefault.jpg">
+  </div>
+  <div class="thumb" onclick="selectVideo(4)">
+    <img src="https://img.youtube.com/vi/m2ow6rAFkyU/hqdefault.jpg">
+  </div>
+</div>
+
   </div>
 </div>
 
